[package]
name = "lpc43xx"
description = "Register definitions for the NXP LPC43xx microcontroller platform, generated through svd2rust"
keywords = ["arm", "register", "peripheral"]
version = "0.0.0"
authors = ["Astro <astro@spaceboyz.net>"]
license = "Apache-2.0"
documentation = "https://docs.rs/lpc43xx"
homepage = "https://github.com/astro/rust-lpc43xx"
include = ["Cargo.toml", "**/*.rs"]

[dependencies]
volatile-register = "0.1.2"

[profile.release]
lto = true
panic = 'abort'
